fixed tuition mobile card

--- a/artwebsite/src/TuitionRates.css
+++ b/artwebsite/src/TuitionRates.css
@@ -104,6 +104,7 @@
 
   .tuition-card {
     padding: 45px 45px;
+    width: 50%;
   }
 
   .tuition-sibling-chart {
